--- a/app/index.html
+++ b/app/index.html
@@ -19,16 +19,16 @@
     </script>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
-    <link href="css/freelancer.css" rel="stylesheet">
+    <link href="../css/freelancer.css" rel="stylesheet">
   </head>
 
   <body id="page-top">
@@ -131,7 +131,7 @@
         <hr class="style1">
         <h2 class="text-center text-uppercase text-secondary pt-4 mb-0">Example</h2>
         <div>
-          <img src="img/example.png" class="img-fluid" alt="example">
+          <img src="../img/example.png" class="img-fluid" alt="example">
         </div>
       </div>
       </div>
@@ -267,27 +267,27 @@
     </div>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template
     <script src="js/freelancer.min.js"></script>-->
 
     <!-- chart.js -->
-    <script src="js/moment.js"></script>
-    <script src="js/Chart.min.js"></script>
+    <script src="../js/moment.js"></script>
+    <script src="../js/Chart.min.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.3.0/dist/chartjs-plugin-datalabels.min.js"></script>-->
 
     <!-- feedback form-->
-    <script src="js/feedback.js"></script>
-    <script src="js/form.js"></script>
+    <script src="../js/feedback.js"></script>
+    <script src="../js/form.js"></script>
 
     <!-- My own scripts to analyze the chat file -->
-    <script src="js/analyze.js"></script>
-    <script src="js/stopwords.js"></script>
+    <script src="../js/analyze.js"></script>
+    <script src="../js/stopwords.js"></script>
 
     <!-- SumoMe -->
     <script async>(function(s,u,m,o,j,v){j=u.createElement(m);v=u.getElementsByTagName(m)[0];j.async=1;j.src=o;j.dataset.sumoSiteId='3a188d739b5f8db07e60404f9b3a748f7e5664c60b71d9a9760bdfed904c77d3';v.parentNode.insertBefore(j,v)})(window,document,'script','//load.sumo.com/');</script>
